configured dingo api

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,15 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+##API Config
+API_DEBUG=true
+API_STANDARDS_TREE=vnd
+API_VERSION=v1
+API_NAME="General Purpose API"
+API_PREFIX=api
+API_DOMAIN=api.expertj.com
+API_DEFAULT_FORMAT=json
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
