--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "tymon/jwt-auth": "^0.5.9",
         "barryvdh/laravel-cors": "^0.8.2",
         "laravel/tinker": "~1.0",
-        "zizaco/entrust": "5.2.x-dev"
+        "zizaco/entrust": "5.2.x-dev",
+        "spatie/laravel-translatable": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
